@@ -417,7 +417,7 @@ int main(int argc, char **argv)
 		return 77;
 	STARPU_CHECK_RETURN_VALUE(ret, "starpu_init");
 
-	starpu_helper_cublas_init();
+	starpu_cublas_init();
 
 	generate_random_problem();
 	register_data();
@@ -431,7 +431,7 @@ int main(int argc, char **argv)
 	starpu_task_wait_for_all();
 	unregister_data();
 	free_data();
-	starpu_helper_cublas_shutdown();
+	starpu_cublas_shutdown();
 	starpu_shutdown();
 
 	return ret;
